--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="MediatR" Version="10.0.1" />
@@ -52,7 +53,6 @@
     <Folder Include="Handlers\SubscriptionHandlers\" />
     <Folder Include="Handlers\UserHandlers\" />
     <Folder Include="Helpers\" />
-    <Folder Include="Commands\UserCommands\" />
     <Folder Include="Handlers\ReviewHandlers\" />
     <Folder Include="Commands\ReviewCommands\" />
     <Folder Include="Commands\BookCommands\" />
