Restructuring Authors and Books

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "AdministratorAccount": {
+    "Password": "admin1234",
+    "Username": "admin",
+    "Email": "Administrator.eBook@mailforspam.com"
+  }
 }
