Fixing Book and Genre many-to-many relations by explicitly adding a mapping table between them. Refactoring CreateBookCommand

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -14,5 +14,7 @@
     "Password": "admin1234",
     "Username": "admin",
     "Email": "Administrator.eBook@mailforspam.com"
-  }
+  },
+
+  "ApiKey": "e11b9ef8-c956-4319-9049-d27c60da6eda"
 }
